--- a/MyShop.Data/App.config
+++ b/MyShop.Data/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <!-- Tao Connect toi sql sever-->
+  <connectionStrings>
+    <clear/>
+    <add name = "MyShopConnection"  connectionString = "Data Source=.\SQLEXPRESS; Initial Catalog=SalesWebsite; Integrated Security=True; MultipleActiveResultSets=True"/>
+  </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
